# dhandho

./: .travis.yml  Cargo.toml  README.md  WORKLOG.md  docker-compose.yml
source_data/: Australia_ASX.csv  Austria_VIE.csv  Belgium_Euronext.csv  Denmark_CSE.csv  Finland_NASDAQ.csv  France_Euronext.csv  Germany_Xetra.csv  Japan_TSE.csv  Netherlands_Euronext.csv  Norway_NASDAQ.csv  Portugal_Euronext.csv  Spain_BME.csv  Sweden_NASDAQ.csv  UK_LSE.csv  US.csv  US_AMEX.csv  US_NASDAQ.csv  US_NYSE.csv
src/: financial.rs  growth_assumption.rs  intrinsic.rs  intrisic.rs  kelly.rs  main.rs  money.rs  stats_provider.rs  test_mock_example.rs
src/cli/: cagr_cli_impl.rs  intrinsic_cli_impl.rs  kelly_cli_impl.rs  mod.rs  port.rs
src/core/: growth_assumption_builder.rs  intrinsic_builder.rs  kelly_builder.rs  mod.rs
src/intrinsic/: intrinsic_builder.rs  intrinsic_service.rs  mod.rs
src/intrinsic_interactor/: intrinsic_builder.rs  mod.rs
src/services/: intrinsic_service.rs
src/stats/: mod.rs  port.rs  repo.rs  stats_repo_impl.rs
src/stats_provider/: mod.rs  provider.rs  yahoo.rs
src/stats_scrapers/: mod.rs  scraper.rs  yahoo.rs
src/utils/: financial.rs  growth_rate.rs  kelly.rs  mod.rs  money.rs
